examples/type_system/failing/32_direct_time_hof_missing_effect.flx
// E400: `time(fn)` itself is Time-effectful.

fn profiled() -> Int with IO {
    time(\() -> 1)
}

fn main() -> Unit with IO {
    profiled();
}
